infra/terraform/modules/project_core/network.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_block

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    "Project" = var.project
    "Name"    = "${var.project}-vpc"
  }

  lifecycle {
    create_before_destroy = true
  }

  depends_on = [
    aws_cloudwatch_log_group.vpc_flow_logs
  ]

}

resource "aws_cloudwatch_log_group" "vpc_flow_logs" {
  name = "${var.project}-vpc-flow-logs"

  tags = {
    "Project" = var.project
    "Name"    = "${var.project}-vpc-flow-logs"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    "Project" = var.project
    "Name"    = "${var.project}-igw"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    "Project" = var.project
    "Name"    = "${var.project}-public-route"
  }
}

resource "aws_subnet" "public" {
  count = length(var.public_subnets)

  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.public_subnets[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = {
    "Project" = var.project
    "Name"    = "${var.project}-public-${var.availability_zones[count.index]}"
  }

  map_public_ip_on_launch = true
}

resource "aws_route_table_association" "public" {
  count          = length(var.public_subnets)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_security_group" "postgres_public" {
  name        = "${var.project}-postgres-public-sg"
  description = "Allow all inbound for Postgres"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "${var.project}-postgres-public-sg"
  }
}

resource "aws_security_group" "dbt_security_group" {
  name        = "${var.project}-ecs-task-sg"
  description = "Security group for ECS tasks"
  vpc_id      = aws_vpc.vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "${var.project}-ecs-task-sg"
  }
}
